<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ligo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.gzligo.ebizzcardstranslator.common.ToolActionBar
        android:id="@+id/register_success_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ligo:show_back_icon="true"
        ligo:txt_center_title="@string/reset_pwd_actionbar"></com.gzligo.ebizzcardstranslator.common.ToolActionBar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30px"
        android:text="@string/reset_pwd_tips"
        android:textColor="@color/black"
        android:textSize="@dimen/px28dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86px"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20px"
            android:layout_weight="1.3"
            android:gravity="center_vertical"
            android:text="@string/reset_pwd_new_pwd"
            android:textColor="@color/black"
            android:textSize="@dimen/px30dp" />

        <EditText
            android:id="@+id/reset_new_pwd_edt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20px"
            android:layout_weight="3"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/reset_pwd_new_pwd_hint"
            android:singleLine="true"
            android:textSize="@dimen/px30dp" />

    </LinearLayout>

    <View
        android:id="@+id/v_slector_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height_01"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20px"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86px"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20px"
            android:layout_weight="1.3"
            android:gravity="center_vertical"
            android:text="@string/reset_pwd_confirm_pwd"
            android:textColor="@color/black"
            android:textSize="@dimen/px30dp" />

        <EditText
            android:id="@+id/reset_confirm_pwd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="20px"
            android:layout_weight="3"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/reset_pwd_confirm_pwd_hint"
            android:singleLine="true"
            android:textSize="@dimen/px30dp" />

    </LinearLayout>

    <Button
        android:id="@+id/reset_pwd_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginTop="40px"
        android:background="@mipmap/green_btn_normal"
        android:textAllCaps="false"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18" />

</LinearLayout>