<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ligo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.gzligo.ebizzcardstranslator.common.ToolActionBar
        android:id="@+id/register_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ligo:show_back_icon="true"
        ligo:txt_center_title="@string/forget_phone_actionbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30px"
        android:text="@string/forget_phone_tips"
        android:textColor="@color/blue"
        android:textSize="@dimen/px28dp" />

    <include layout="@layout/selector_country" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:background="@drawable/onclick_color_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/forget_tv_district_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"
            android:layout_weight="5"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/login_district_num"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_16" />

        <EditText
            android:id="@+id/forget_tv_phone_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="61px"
            android:layout_weight="8"
            android:background="@null"
            android:ellipsize="end"
            android:hint="@string/forget_pwd_hint"
            android:inputType="phone"
            android:lines="1"
            android:paddingLeft="20px"
            android:singleLine="true"
            android:textSize="@dimen/text_size_16" />

    </com.zhy.autolayout.AutoLinearLayout>

    <Button
        android:id="@+id/forget_next_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginTop="40px"
        android:background="@mipmap/green_btn_normal"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18" />

</LinearLayout>